tests/unterminated_expression2.c.t.exp
unterminated_expression2.c.t:1:6: error: Unterminated {{

{{ 1+1
      ^

